# plutus-plonk-poc

./: .stylish-haskell.yaml  README.md  appliedPlonkScript.flat  cabal.project  flake.nix  logs  test  test-vector.out
bls-utils/: bls-utils.cabal
bls-utils/src/: Main.hs
bls-utils/src/Plutus/Crypto/: BlsUtils.hs
bls-utils/src/Plutus/Crypto/BlsUtils/: Config.hs  Field.hs
plutus-benchmark/: plutus-benchmark.cabal
plutus-benchmark/common/PlutusBenchmark/: NaturalSort.hs  ProtocolParameters.hs
plutus-benchmark/exe/: Main.hs
plutus-benchmark/src/PlutusBenchmark/BlsField/: RunBlsField.hs  Scripts.hs
plutus-benchmark/src/PlutusBenchmark/Verifier/: RunTests.hs  RunVerifier.hs  Scripts.hs
plutus-crypto/: plutus-crypto.cabal
plutus-crypto/src/Plutus/Crypto/: BlsField.hs
plutus-crypto/src/Plutus/Crypto/Number/: ModArithmetic.hs  Serialize.hs
plutus-crypto/src/Plutus/Data/: Bits.hs
plutus-number/: plutus-number.cabal
plutus-number/src/: Main.hs
plutus-number/src/Plutus/Crypto/Number/: ModArithmetic.hs
plutus-plonk/: plutus-plonk.cabal
plutus-plonk/bench/: Main.hs  Script.hs
plutus-plonk/src/Plutus/Crypto/: BlsField.hs  Plonk.hs
plutus-plonk/src/Plutus/Crypto/Plonk/: Inputs.hs  Polynomial.hs  Transcript.hs  Verifier.hs
plutus-plonk/test/: Main.hs
test-vectors/: pre-in-test-vector.json  proof-test-vector.json  test-vector.out
