cabal-version: 3.0
name: bls-utils
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
synopsis: "A basic library with field operations for BLS12-381"
build-type: Simple

library
    exposed-modules:  Plutus.Crypto.BlsUtils
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >= 4.2 && < 5
                    , plutus-tx ^>= 1.9