cabal-version: 3.0
name: plutus-plonk
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
synopsis: "A plutus plonk verifier"
build-type: Simple

library
    exposed-modules:  Plutus.Crypto.Plonk
                      Plutus.Crypto.BlsField
    other-modules:    Plutus.Crypto.Plonk.Transcript
                      Plutus.Crypto.Plonk.Verifier
                      Plutus.Crypto.Plonk.Inputs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >= 4.2 && < 5
                    -- , plutus-tx ^>= 1.9
                    -- , plutus-core ^>= 1.9
                    , plutus-tx
                    , plutus-core
                    -- , plutus-crypto

test-suite run-vector-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base 
              --  , plutus-tx ^>= 1.9
              --  , plutus-core ^>= 1.9
               , plutus-tx
               , plutus-core
               , plutus-plonk
              --  , plutus-crypto
               , aeson
               , bytestring

benchmark run-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  other-modules: Script
  default-language: Haskell2010
  build-depends: base 
               , plutus-tx-plugin
               , plutus-ledger-api
              --  , plutus-tx ^>= 1.9
              --  , plutus-core ^>= 1.9
               , plutus-tx
               , plutus-core
               , bytestring
               , aeson
               , flat
               , plutus-plonk
              --  , plutus-crypto
  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors
