cabal-version: 3.0
name:          plutus-plonk
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:      "A plutus plonk verifier"
build-type:    Simple

library
  exposed-modules:
    Plutus.Crypto.BlsField
    Plutus.Crypto.Plonk

  other-modules:
    Plutus.Crypto.Plonk.Inputs
    Plutus.Crypto.Plonk.Transcript
    Plutus.Crypto.Plonk.Verifier

  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base         >=4.2   && <5
    , plutus-core  ^>=1.20
    , plutus-tx    ^>=1.20

test-suite run-vector-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , plutus-core   ^>=1.20
    , plutus-plonk
    , plutus-tx     ^>=1.20

benchmark run-bench
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench
  other-modules:    Script
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , bytestring
    , flat
    , plutus-core        ^>=1.20
    , plutus-ledger-api  ^>=1.20
    , plutus-plonk
    , plutus-tx          ^>=1.20
    , plutus-tx-plugin   ^>=1.20

  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise -fexpose-all-unfoldings -fplugin-opt
    PlutusTx.Plugin:defer-errors